# sigmark

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-02-23-core-signing-design.md  2026-02-23-core-signing-plan.md
hugo/layouts/partials/: gpg-badge.html
src/sigmark/: __init__.py  cli.py  gpg.py  markdown.py  wkd.py
tests/: conftest.py  test_cli.py  test_gpg.py  test_markdown.py  test_wkd.py
